# MstHora

./: README.md
notes/: 7 segment display generator.xlsx  Light_Sensor-BH1750.txt  bill of materials.md  display_7seg_spi.txt  display_max_driver.txt  gnu3 license.txt  how to compile.md  lux_graph.xlsx  notes.md  notes.txt
schematics/: mhdrw01 - board dcf schematic.xcf  mhdrw02 - display schematic.xcf  mhdrw04 - dcf routing.xcf  mhdrw06 - display mech.xcf  mhdrw07 - box board mech.xcf  mhdrw08 - shield mech.xcf  mhdrw10 - final device.xcf
schematics/draft/: dcf_board_routing_dev.xcf  dcf_board_sch_dev.xcf  display_board_routing_dev.xcf  display_board_sch_dev.xcf  main_board_routing_dev.xcf  main_board_sch_dev.xcf
src/: CMakeLists.txt  cli.c  cli.h  cli_func.c  cli_func.h  datetime_utils.c  datetime_utils.h  dcf77.c  dcf77.h  disp7seg.c  disp7seg.h  disp_max.c  disp_max.h  gpio_drv.c  gpio_drv.h  i2c_bh1750.c  i2c_bh1750.h  i2c_drv.c  i2c_drv.h  i2c_manager.c  i2c_manager.h  i2c_mem.c  i2c_mem.h  i2c_rtc.c  i2c_rtc.h  in_out.c  in_out.h  main.c  rtc_intern.c  rtc_intern.h  spi_drv.c  spi_drv.h  test_btn.c  test_btn.h  test_mem.c  test_mem.h  uart_drv.c  uart_drv.h  ustime.c  ustime.h  (+2 more)
